--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Fitbit</h1>
+<div class="header">
+  <% if user_signed_in? %>
+    Hello <%= current_user.email %> <%= link_to "Logout", destroy_user_session_path, method: :delete %> <hr>
+  <% else %>
+    <%# link_to "Sign in with Fitbit", "http://localhost:3000/users/auth/fitbit" %>
+    <%= link_to "Sign in with Fitbit", user_fitbit_omniauth_authorize_path %>
+  <% end %>
+</div>
