--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,6 @@
     Hello <%= current_user.email %> <%= link_to "Logout", destroy_user_session_path, method: :delete %> <hr>
   <% else %>
     <%# link_to "Sign in with Fitbit", "http://localhost:3000/users/auth/fitbit" %>
-    <%= link_to "Sign in with Fitbit", user_fitbit_omniauth_authorize_path %>
+    <%= link_to "Sign in with Fitbit", user_omniauth_authorize_path(provider: 'fitbit') %>
   <% end %>
 </div>
