--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,15 @@
+<script type="text/javascript">
+  var user_signed_in = <%= user_signed_in? || false %>;
+</script>
+
 <div class="header">
   <% if user_signed_in? %>
     Hello <%= current_user.email %> <%= link_to "Logout", destroy_user_session_path, method: :delete %> <hr>
   <% else %>
-    <%# link_to "Sign in with Fitbit", "http://localhost:3000/users/auth/fitbit" %>
     <%= link_to "Sign in with Fitbit", user_omniauth_authorize_path(provider: 'fitbit') %>
   <% end %>
+</div>
+
+<div class="main-wrapper">
+  <%= render partial: 'api_output' if user_signed_in? %>
 </div>
