--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,11 +39,9 @@
         </button>
         <a class="navbar-brand" href="/">Fitbit</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <!-- <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
-          </ul> -->
+          <ul class="nav navbar-nav">
+            <li></li>
+          </ul>
         </div>
       </div>
     </div>
